--- a/dino.html
+++ b/dino.html
@@ -1,16 +1,21 @@
 <html>
 
 <head>
-<title>Google Classroom</title>
-<meta name="description" content="Dino Chrome">
-<meta property="og:title" content="Play Chrome Dino">
+<title>T-Rex Game</title>
+<meta name="description" content="Ripped T-Rex/Dino game of Chromium">
+<meta property="og:title" content="Play the hidden T-Rex Dinosaur game of Chromium .">
 <meta property="og:type" content="article">
 <meta property="og:url" content="http://www.thecodepost.org">
 <meta property="og:image" content="http://img.thecodepost.org/2015/01/trex.png">
 <meta property="og:site_name" content="The Code Post">
-<meta property="og:description" content="Google Chrome Dino for all devices. Adapted by Elizalde Alexios">
- <link rel="icon" href="https://ssl.gstatic.com/classroom/ic_product_classroom_32.png">
+<meta property="og:description" content="Google Chrome has a hidden T-Rex game only for offline mode. But now, you can enjoy it any time and on any device, but you gotta stay online!!!">
 
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@thecodepost">
+<meta name="twitter:creator" content="@thecodepost">
+<meta name="twitter:title" content="Check out the cool hidden game from Google Chrome!">
+<meta name="twitter:description" content="Check out the cool hidden game from Google Chrome!">
+<meta name="twitter:image:src" content="http://img.thecodepost.org/2015/01/trex.png">
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 	<!--script type="text/javascript" src="a.js"></script-->
@@ -24,7 +29,7 @@
         myClasses[i].style.display = 'none';
       }
 	}
-    // Copyright (c) 2023 The Chromium Authors. All rights reserved. Adaptation done by Elizalde Alexios
+    // Copyright (c) 2014 The Chromium Authors. All rights reserved.
     // Use of this source code is governed by a BSD-style license that can be
     // found in the LICENSE file.
     (function() {
@@ -2553,8 +2558,8 @@ html[subframe] body {
    }(document, 'script', 'facebook-jssdk'));
 </script>
 <div id="main-frame-error" class="interstitial-wrapper" jstcache="0">
-    <div class="onlyforchrome" style="font-size: 30px;text-align: center;font-family: Helvetica;">Press space to start</div>
-    <div class="onlyforchrome" style="margin-top:5px;text-align:center;color:#8a8a8a;margin-bottom:80px; font-size:.8em;line-height:1.2em;font-family: Georgia;"><a href="http://www.thecodepost.org/internet/play-hidden-t-rex-game-offline-chrome/" target="_blank"></div>
+    <div class="onlyforchrome" style="font-size: 30px;text-align: center;font-family: Helvetica;">Running T-Rex</div>
+    <div class="onlyforchrome" style="margin-top:5px;text-align:center;color:#8a8a8a;margin-bottom:80px; font-size:.8em;line-height:1.2em;font-family: Georgia;"><a href="http://www.thecodepost.org/internet/play-hidden-t-rex-game-offline-chrome/" target="_blank"><strong>T-Rex Dino game</strong></a> from Google Chrome offline mode ripped by <a href="https://www.twitter.com/thecodepost" target="_blank"><strong>@thecodepost</strong></a>.<br/> Press "Space" to jump your Dino and start the game.</div>
 	<div id="main-frame-notchrome" style="display:none; margin-top:50px;">Sorry, this game only runs on the Google Chrome! You can download it free <a href="https://www.google.com/chrome">here</a></div>
     <div id="offline-resources" jstcache="0">
     <div id="offline-resources-1x" jstcache="0">
@@ -2600,6 +2605,7 @@ html[subframe] body {
 				data-show-faces="false">
 			</div></td>
 			<td style="padding-left:15px;"><div class="g-plusone" data-size="medium" data-href="http://apps.thecodepost.org/trex/trex.html"></div></td>
+			<td><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://apps.thecodepost.org/trex/trex.html" data-text="Cool Hidden T-Rex game" data-via="thecodepost" data-hashtags="trexgame">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></td>
 	  </tr></table>
     </div>
